--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header') %>
   <main>
-    <h3>Index</h3>
+    <h3 class="text-center bg-red-200">Index</h3>
   </main>
   </body>
 
