--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>GameHub</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/output.css">
     <% if(game && game.cssFile !==null){ %>
         <link rel="stylesheet" href="/css/<%=game.cssFile%>" />
         <% } %>
