--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
 <%- include('./partials/header') %>
-  <main>
-    <h3 class="text-center bg-red-200">Index</h3>
+  <main class="main">
+    <h3 class="main__title">Bienvenue sur GameHub</h3>
   </main>
+  </div>
   </body>
 
   </html>
