--- a/views/invader.ejs
+++ b/views/invader.ejs
@@ -8,6 +8,7 @@
         <div class="color green" id="green"></div>
     </div>
     <script src="/js/invader.js"></script>
+    </div>
     </body>
 
     </html>
