--- a/public/css/diceRoller.css
+++ b/public/css/diceRoller.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f39c12;
+  background-color: #ffae2b;
 }
 
 #app {
@@ -8,7 +8,7 @@ body {
 }
 
 #player {
-  background-color: #f39c12;
+  background-color: #ffae2b;
 }
 
 #dealer {
@@ -26,17 +26,23 @@ body {
 }
 
 @keyframes pop {
-  0% { transform: scale(0); }
-  75% { transform: scale(1.1); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(0);
+  }
+  75% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .dice {
-  background-image: url('../images/dice-sprite.png');
+  background-image: url("../images/dice-sprite.png");
   width: 100px;
   height: 100px;
   margin: 1em;
-  animation: pop .4s ease 0s 1;
+  animation: pop 0.4s ease 0s 1;
 }
 
 #welcome {
@@ -47,7 +53,8 @@ body {
 }
 
 /* id => pratique pour un getElementById, mais dans le css... */
-#app.hidden, #welcome.hidden {
+#app.hidden,
+#welcome.hidden {
   display: none;
 }
 
@@ -58,7 +65,7 @@ body {
   border-radius: 5px;
   cursor: pointer;
   font-size: 1em;
-  border-bottom:4px solid #ad5304;
+  border-bottom: 4px solid #ad5304;
 }
 
 .btn:hover {
@@ -83,14 +90,18 @@ body {
 }
 
 #dice-number {
-  margin: .5em 0;
+  margin: 0.5em 0;
   color: #fff;
   font-weight: bold;
 }
 
 @keyframes fade {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .result {
@@ -98,12 +109,12 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  background: rgba(0, 0, 0, .3);
+  background: rgba(0, 0, 0, 0.3);
   color: #fff;
   font-size: 3em;
-  padding: .3em 0;
+  padding: 0.3em 0;
   text-align: center;
-  animation: fade .4s ease 0s 1;
+  animation: fade 0.4s ease 0s 1;
 }
 
 .counter {
@@ -118,4 +129,97 @@ body {
   align-items: center;
   font-size: 75vh;
   text-shadow: 5px 5px 0 #000;
+}
+
+/*  */
+
+body {
+  font-family: Montserrat, sans-serif;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 20% 80%;
+}
+
+.header,
+.main {
+  height: 100vh;
+}
+
+.header {
+  background: #a66806;
+}
+
+.header__title {
+  font-size: 3rem;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__link {
+  color: white;
+}
+
+.header__nav {
+  height: 70%;
+}
+
+.header__list {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.header__element {
+  font-size: 1.5rem;
+  color: white;
+  height: 4rem;
+  width: 80%;
+  margin: auto;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header__element:hover {
+  background: white;
+  color: #a66806;
+}
+
+.main__title {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 5rem;
+}
+
+@media screen and (max-width: 1000px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+  .header,
+  .main {
+    height: auto;
+  }
+
+  .header__title {
+    padding-top: 20px;
+    padding-bottom: 5px;
+  }
+
+  .header__list {
+    margin: 60px, 0;
+  }
+
+  .header__element {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  .main__title {
+  }
 }
