--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,12 +17,15 @@ body {
 }
 
 .header__title {
-  color: white;
   font-size: 3rem;
   height: 20%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.header__link {
+  color: white;
 }
 
 .header__nav {
