--- a/views/diceRoller.ejs
+++ b/views/diceRoller.ejs
@@ -1,25 +1,66 @@
-<%- include('./partials/header') %>
-  <h3>Dice Roller</h3>
+<!DOCTYPE html>
+<html lang="fr">
 
-  <div id="welcome">
-    <button id="play" class="btn" type="button">Jouer</button>
-  </div>
-  <div id="app" class="hidden">
-    <div class="form">
-      <form id="game-form">
-        <input type="range" id="dice-number-input" value="3" min="1" max="20">
-        <span id="dice-number">3</span>
-        <button class="btn">Valider le nombre de dés et lancer</button>
-      </form>
-    </div>
-    <div id="game">
-      <div class="board" id="player"></div>
-      <div class="board" id="dealer"></div>
-    </div>
-  </div>
+<head>
+  <meta charset="UTF-8">
+  <title class="">GameHub</title>
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 
-  <script src="/js/diceRoller.js"></script>
-  </div>
-  </body>
+  <% if(!game){ %>
+    <link rel="stylesheet" href="/css/style.css" />
+    <% } %>
 
-  </html>
+      <% if(game && game.cssFile !==null){ %>
+        <link rel="stylesheet" href="/css/<%=game.cssFile%>" />
+        <% } %>
+
+          <% if(status===404){ %>
+            <link rel="stylesheet" href="/css/404.css" />
+            <% } %>
+
+</head>
+
+<body>
+  <div class="container">
+    <header class="header">
+      <h1 class="header__title"><a class="header__link" href="/">GameHub</a></h1>
+      <nav class="header__nav">
+        <ul class="header__list">
+          <% games.forEach((game)=> { %>
+            <li><a class="header__element" href="/game/<%=game.name%>">
+                <%=game.title%>
+              </a></li>
+            <%})%>
+        </ul>
+      </nav>
+    </header>
+    <main class="main">
+      <h3>Dice Roller</h3>
+
+      <div id="welcome">
+        <button id="play" class="btn" type="button">Jouer</button>
+      </div>
+      <div id="app" class="hidden">
+        <div class="form">
+          <form id="game-form">
+            <input type="range" id="dice-number-input" value="3" min="1" max="20">
+            <span id="dice-number">3</span>
+            <button class="btn">Valider le nombre de dés et lancer</button>
+          </form>
+        </div>
+        <div id="game">
+          <div class="board" id="player"></div>
+          <div class="board" id="dealer"></div>
+        </div>
+      </div>
+
+      <main class="main">
+        <script src="/js/diceRoller.js"></script>
+  </div>
+</body>
+
+</html>
