--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,90 +1,55 @@
 body {
   font-family: Montserrat, sans-serif;
-}
-
-.container {
-  display: grid;
-  grid-template-columns: 20% 80%;
-}
-
-.header,
-.main {
-  height: 100vh;
-}
-
-.header {
-  background: rgb(7, 66, 94);
+  background: #f0f0f0;
 }
 
 .header__title {
+  text-align: center;
+  padding: 20px;
   font-size: 3rem;
-  height: 20%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .header__link {
-  color: white;
+  color: black;
 }
 
-.header__nav {
-  height: 70%;
-}
-
-.header__list {
-  height: 50%;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
-
-.header__element {
-  font-size: 1.5rem;
-  color: white;
-  height: 4rem;
-  width: 80%;
-  margin: auto;
-  padding: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.header__element:hover {
+.main {
   background: white;
-  color: rgb(7, 66, 94);
+  width: 70%;
+  margin: auto;
+  border-radius: 3px;
+  height: 700px;
+  margin-top: 50px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .main__title {
-  margin-top: 15px;
   text-align: center;
-  font-size: 5rem;
+  padding: 20px;
+  font-size: 2rem;
 }
 
-@media screen and (max-width: 1000px) {
-  .container {
-    display: flex;
-    flex-direction: column;
-  }
-  .header,
-  .main {
-    height: auto;
-  }
+.cards {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 60px;
+}
 
-  .header__title {
-    padding-top: 20px;
-    padding-bottom: 5px;
-  }
+.card {
+  color: black;
+  border: 1px solid rgba(0, 0, 0, 0.151);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 4px;
+  height: 400px;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 20px;
+}
 
-  .header__list {
-    margin: 60px, 0;
-  }
-
-  .header__element {
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
-  .main__title {
-  }
+.card__img {
+  height: 250px;
+  width: 242px;
 }
