--- a/views/diceRoller.ejs
+++ b/views/diceRoller.ejs
@@ -3,13 +3,19 @@
 
 <head>
   <meta charset="UTF-8">
+  <script src="https://kit.fontawesome.com/090d5fde99.js" crossorigin="anonymous"></script>
   <title class="">DiceRoller | Jeu du Lanceur de Dés</title>
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="dices.ico" type="image/x-icon">
-  <script src="https://kit.fontawesome.com/090d5fde99.js" crossorigin="anonymous"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="/dice/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/dice/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/dice/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="/site.webmanifest">
+
+
 
   <% if(game && game.cssFile !==null){ %>
   <link rel="stylesheet" href="/css/<%=game.cssFile%>" />
