--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,12 @@
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/homeico/favico/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/homeico/favico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/homeico/favico/favicon-16x16.png">
+  <link rel="manifest" href="/homeico/site.webmanifest">
 </head>
 
 <body>
@@ -23,16 +26,16 @@
       <h2 class="main__title">Nos Jeux</h2>
       <div class="cards">
         <% games.forEach((game)=> { %>
-          <a class="card" href="/game/<%= game.name %>">
-            <img class="card__img" src="/images/logo.jpg" alt="">
-            <h3>
-              <%= game.title %>
-            </h3>
-            <p>
-              <%= game.description %>
-            </p>
-          </a>
-          <% }) %>
+        <a class="card" href="/game/<%= game.name %>">
+          <img class="card__img" src="/images/logo.jpg" alt="">
+          <h3>
+            <%= game.title %>
+          </h3>
+          <p>
+            <%= game.description %>
+          </p>
+        </a>
+        <% }) %>
 
       </div>
 
