--- a/views/diceRoller.ejs
+++ b/views/diceRoller.ejs
@@ -2,8 +2,9 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8">
   <script src="https://kit.fontawesome.com/090d5fde99.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title class="">DiceRoller | Jeu du Lanceur de Dés</title>
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
