--- a/public/css/diceRoller.css
+++ b/public/css/diceRoller.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background: rgb(243, 156, 18);
   background: linear-gradient(90deg, rgba(243, 156, 18, 1) 38%, rgba(230, 126, 34, 1) 58%);
@@ -130,25 +134,27 @@ body {
   background: #fffcc9;
   border-radius: 8px;
   height: 13px;
-  width: 70%;
+  width: 60%;
   outline: none;
   -webkit-appearance: none;
 }
 
 @media screen and (max-width: 1400px) {
   .form {
-    top: 30px;
-    gap: 30px;
+    position: relative;
   }
 
+  #app {
+    flex-direction: column;
+  }
   .label,
   .dices_value {
-    font-size: 1.7rem;
+    font-size: 1.4rem;
   }
 
   #play,
   .buttonReplay {
-    font-size: 2.5rem;
+    font-size: 1.3rem;
     background: rgb(230, 126, 34);
     background: linear-gradient(90deg, rgba(230, 126, 34, 1) 0%, rgba(230, 188, 34, 1) 100%);
   }
@@ -159,11 +165,15 @@ body {
   }
 
   #dices {
-    width: 100%;
+    width: 50%;
   }
 
   .buttonReplay {
     position: absolute;
     top: 1300px;
+  }
+
+  #return {
+    top: 70px;
   }
 }
