--- a/public/css/guessNumber.css
+++ b/public/css/guessNumber.css
@@ -187,6 +187,17 @@ label {
   margin: 20px 0;
 }
 
+#return {
+  color: black;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+
+#return:hover {
+  scale: 1.3;
+}
+
 @media screen and (max-width: 600px) {
   h1 {
     font-size: 2rem;
