--- a/public/css/invader.css
+++ b/public/css/invader.css
@@ -1,20 +1,16 @@
-/* {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}*/
 body {
   background-color: #6459cd;
+}
+.container {
   margin: 0;
-  height: 100vh;
+  height: 95vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 .configuration {
   height: 200px;
-  background: #5a52c5;
+  background: #3148ad;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -26,6 +22,7 @@ body {
 
 #pixelContainer {
   display: flex;
+  gap: 0;
   flex-wrap: wrap;
 }
 
@@ -50,6 +47,10 @@ body {
   outline: none;
 }
 
+.input-field::placeholder {
+  font-size: 0.73rem;
+}
+
 .input-field:first-child {
   border-top-left-radius: 7px;
   border-bottom-left-radius: 7px;
@@ -66,124 +67,66 @@ body {
 
 .colorPalet {
   height: 70px;
-  width: 300px;
+  width: 150px;
   background-color: rgba(0, 0, 0, 0.226);
-  align-self: flex-end;
+  align-self: center;
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  justify-content: space-around;
 }
 
 .color {
-  border-radius: 50%;
   height: 50px;
   width: 50px;
   cursor: pointer;
 }
 
-.white {
-  background: white !important;
-}
-
-.black {
-  background: black !important;
-}
-
-.green {
-  background: green !important;
-}
-
-.orange {
-  background: orange !important;
-}
-
-/*  */
-
-body {
-  font-family: Montserrat, sans-serif;
-}
-
-.container {
-  display: grid;
-  grid-template-columns: 20% 80%;
-}
-
-.header,
-.main {
-  height: 100vh;
-}
-
-.header {
-  background: #05a696;
-}
-
-.header__title {
-  font-size: 3rem;
-  height: 20%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.header__link {
+/* .footer {
   color: white;
-}
-
-.header__nav {
-  height: 70%;
-}
-
-.header__list {
-  height: 50%;
-  display: flex;
-  flex-direction: column;
+  font-size: 1.1rem;
+  font-style: italic;
   text-align: center;
-}
+  margin: 20px;
+  margin-bottom: 30px;
+} */
 
-.header__element {
-  font-size: 1.5rem;
+#return {
   color: white;
-  height: 4rem;
-  width: 80%;
-  margin: auto;
-  padding: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
+  top: 30px;
+  left: 30px;
 }
 
-.header__element:hover {
-  background: white;
-  color: #05a696;
+#return:hover {
+  scale: 1.3;
 }
 
-.main__title {
-  margin-top: 15px;
-  text-align: center;
-  font-size: 5rem;
-}
-
-@media screen and (max-width: 1000px) {
-  .container {
-    display: flex;
+@media screen and (max-width: 700px) {
+  .configuration {
     flex-direction: column;
   }
-  .header,
-  .main {
-    height: auto;
+
+  .input-field {
+    margin-bottom: 20px;
+    height: 15px;
+    text-align: center;
+    border: none;
+    font-size: 1em;
+    border-radius: 8px;
   }
 
-  .header__title {
-    padding-top: 20px;
-    padding-bottom: 5px;
+  .input-field::placeholder {
+    font-size: 0.5rem;
   }
-
-  .header__list {
-    margin: 60px, 0;
+  .input-field:nth-child(1) {
+    margin-top: 8px;
   }
-
-  .header__element {
-    margin-top: 5px;
-    margin-bottom: 5px;
+  .btn {
+    padding: 10px;
+    margin-bottom: 10px;
+    height: 35px;
+    font-size: 1em;
+    width: 220px;
+    border-radius: 8px;
   }
 }
