--- a/public/css/guessNumber.css
+++ b/public/css/guessNumber.css
@@ -1,12 +1,8 @@
-@font-face {
-  font-family: "Fresca";
-  src: url(./fonts/Fresca-Regular.ttf);
-}
+@import url("https://fonts.googleapis.com/css2?family=Fresca&display=swap");
 
 * {
   margin: 0;
   padding: 0;
-  font-family: "Fresca";
   box-sizing: border-box;
   list-style-type: none;
 }
@@ -14,6 +10,7 @@
 body {
   background: #e1e1e7;
   margin-bottom: 30px;
+  font-family: "Fresca";
 }
 
 /* img{
@@ -27,10 +24,6 @@ body {
   text-align: center;
   font-size: 4rem;
   padding-top: 50px;
-}
-
-#menu:hover {
-  cursor: pointer;
 }
 
 #guess:hover {
