--- a/public/css/invader.css
+++ b/public/css/invader.css
@@ -1,6 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+
 body {
   background-color: #6459cd;
+  font-family: Rubik, sans-serif;
 }
+
+#menu {
+  text-align: center;
+  font-size: 3.5rem;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  color: white;
+}
+
 .container {
   margin: 0;
   height: 95vh;
@@ -9,7 +21,7 @@ body {
   justify-content: space-between;
 }
 .configuration {
-  height: 200px;
+  height: 160px;
   background: #3148ad;
   display: flex;
   justify-content: center;
@@ -73,6 +85,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  margin-bottom: 100px;
 }
 
 .color {
@@ -104,6 +117,7 @@ body {
 @media screen and (max-width: 700px) {
   .configuration {
     flex-direction: column;
+    padding: 30px;
   }
 
   .input-field {
@@ -128,5 +142,9 @@ body {
     font-size: 1em;
     width: 220px;
     border-radius: 8px;
+  }
+
+  #menu {
+    font-size: 2rem;
   }
 }
