--- a/views/diceRoller.ejs
+++ b/views/diceRoller.ejs
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="180x180" href="/dice/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/dice/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/dice/favicon-16x16.png">
@@ -29,15 +29,16 @@
 </head>
 
 <body>
+  <h1 id="menu">DICE ROLLER</h1>
   <a href="/"><i id="return" class="fa-solid fa-house fa-xl"></i></a>
-  <div id="app">
-    <form class="form" action="">
-      <label class="label" for="dices">Combien de dés voulez-vous jouer ?</label>
-      <input id="dices" type="range" name="dices" min="1" value="10" max="20">
-      <div class="dices_value"></div>
-      <button id="play">Lancer !</button>
+  <form class="form" action="">
+    <label class="label" for="dices">Combien de dés voulez-vous jouer ?</label>
+    <input id="dices" type="range" name="dices" min="1" value="10" max="20">
+    <div class="dices_value"></div>
+    <button id="play">Lancer !</button>
 
-    </form>
+  </form>
+  <div id="app">
     <div class="board" id="player"></div>
     <div class="board" id="dealer"></div>
   </div>
