--- a/views/invader.ejs
+++ b/views/invader.ejs
@@ -7,14 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title class="">Invader | Pixel Art</title>
   <link rel="stylesheet" href="/css/reset.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <!-- <link rel="apple-touch-icon" sizes="180x180" href="/dice/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/dice/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/dice/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="manifest" href="/site.webmanifest"> -->
+
 
 
 
@@ -29,6 +22,7 @@
 </head>
 
 <body>
+  <h1 id="menu">INVADER</h1>
   <a href="/"><i id="return" class="fa-solid fa-house fa-xl"></i></a>
   <div class="container">
 
