--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,9 +34,13 @@ body {
   display: flex;
   justify-content: space-around;
   margin-top: 60px;
+  perspective: 1000px;
 }
 
 .card {
+  position: relative;
+  transition: transform 0.6s ease-in-out 0.1s;
+  transform-style: preserve-3d;
   color: black;
   border: 1px solid rgba(0, 0, 0, 0.151);
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -47,10 +51,58 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 20px;
+}
+.flip-card-back {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: rotateY(180deg);
+  text-align: center;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.151);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.card:hover {
+  transform: rotateY(180deg);
+}
+
+.innerCard,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+.innerCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .card__img {
   height: 250px;
   width: 242px;
+}
+.diceRollerCard {
+  background: rgb(243, 156, 18);
+  background: linear-gradient(90deg, rgba(243, 156, 18, 1) 38%, rgba(230, 126, 34, 1) 58%);
+}
+
+.invaderCard {
+  background: #6459cd;
+}
+
+.guessNumberCard {
+  background: #a1a1a1;
+}
+
+.description {
+  padding: 40% 8px;
+  color: rgb(255, 255, 255);
+  line-height: 1.4;
 }
