--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,17 +24,21 @@
       <div class="cards">
         <% games.forEach((game)=> { %>
         <a class="card" href="/game/<%= game.name %>">
-          <img class="card__img" src="/images/logo.jpg" alt="">
-          <h3>
-            <%= game.title %>
-          </h3>
-          <p>
-            <%= game.description %>
-          </p>
+          <div class="innerCard">
+            <img class="card__img" src="/images/logo.jpg" alt="">
+            <h3>
+              <%= game.title %>
+            </h3>
+          </div>
+          <div class="flip-card-back <%=game.name%>Card">
+            <p class="description"><%= game.description %></p>
+          </div>
         </a>
+
         <% }) %>
 
       </div>
+
 
 
     </main>
