--- a/public/css/diceRoller.css
+++ b/public/css/diceRoller.css
@@ -22,7 +22,6 @@ body {
 
 .board {
   min-height: 100vh;
-  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -47,6 +46,7 @@ body {
   transform: translateX(-50%);
   width: 500px;
   height: 2rem;
+  max-width: 100vw;
 }
 
 .label {
@@ -97,15 +97,17 @@ body {
 }
 
 #score {
+  position: absolute;
+  left: 20%;
+  bottom: 60px;
   font-size: 2rem;
-  padding-bottom: 20px;
   width: 60%;
   margin: auto;
   color: rgba(255, 255, 255, 0.774);
   display: flex;
   justify-content: space-evenly;
-  background: rgb(243, 156, 18);
-  background: linear-gradient(90deg, rgba(243, 156, 18, 1) 38%, rgba(230, 126, 34, 1) 58%);
+  /* background: rgb(243, 156, 18);
+  background: linear-gradient(90deg, rgba(243, 156, 18, 1) 38%, rgba(230, 126, 34, 1) 58%); */
 }
 
 .scoreR {
@@ -177,6 +179,8 @@ body {
   }
 
   #score {
+    padding-bottom: 30px;
+    position: static;
     font-size: 1.4rem;
   }
 }
