--- a/views/diceRoller.ejs
+++ b/views/diceRoller.ejs
@@ -1,32 +1,4 @@
-<!DOCTYPE html>
-<html lang="fr">
-
-<head>
-  <script src="https://kit.fontawesome.com/090d5fde99.js" crossorigin="anonymous"></script>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title class="">DiceRoller | Jeu du Lanceur de Dés</title>
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <link rel="apple-touch-icon" sizes="180x180" href="/dice/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/dice/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/dice/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="manifest" href="/site.webmanifest">
-
-
-
-  <% if(game && game.cssFile !==null){ %>
-  <link rel="stylesheet" href="/css/<%=game.cssFile%>" />
-  <% } %>
-
-  <% if(status===404){ %>
-  <link rel="stylesheet" href="/css/404.css" />
-  <% } %>
-
-</head>
+<%- include('partials/header') %>
 
 <body>
   <h1 id="menu">DICE ROLLER</h1>
