--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,18 @@
-<%- include('partials/header') %>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title class="">SpotGames</title>
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/style.css" />
+</head>
 
 <body>
   <div class="container">
     <header class="header">
-      <h1 class="header__title"><a class="header__link" href="/">GameSpot</a></h1>
+      <h1 class="header__title"><a class="header__link" href="/">SpotGames</a></h1>
       </nav>
     </header>
 
