--- a/public/css/diceRoller.css
+++ b/public/css/diceRoller.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background: rgb(243, 156, 18);
+  background: #f39c12;
   background: linear-gradient(90deg, rgba(243, 156, 18, 1) 38%, rgba(230, 126, 34, 1) 58%);
   font-family: "Roboto Condensed", sans-serif;
 }
@@ -18,6 +18,7 @@ body {
 
 #app {
   display: flex;
+  justify-content: space-evenly;
 }
 
 .board {
