--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,5 +20,8 @@
   <% if(status===404){ %>
   <link rel="stylesheet" href="/css/404.css" />
   <% } %>
-
+  <link rel="apple-touch-icon" sizes="180x180" href="/favico/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favico/favicon-16x16.png">
+  <link rel="manifest" href="/favico/site.webmanifest">
 </head>
