--- a/public/css/pixelize.css
+++ b/public/css/pixelize.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 body {
-  background-color: #6459cd;
+  background-color: #97d1f7;
   font-family: Rubik, sans-serif;
 }
 
@@ -22,7 +22,7 @@ body {
 }
 .configuration {
   height: 160px;
-  background: #3148ad;
+  background: #079dd9;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -72,7 +72,7 @@ body {
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
   color: white;
-  background-color: #9b68e4;
+  background-color: #0439d9;
   height: 90px;
   cursor: pointer;
 }
